Bug squashing - improved label formatting in 4x4, made data updating more consistent.

--- a/frontend/src/labelPreview/labelPreview.css
+++ b/frontend/src/labelPreview/labelPreview.css
@@ -40,7 +40,7 @@
 
 .borderless {
     border-color: white;
-    margin: 0 10px;
+    margin: 0 0.125in;
 }
 
 .nameContainer {
