--- a/frontend/src/labelPreview/labelPreviewLandscape.css
+++ b/frontend/src/labelPreview/labelPreviewLandscape.css
@@ -14,7 +14,7 @@
 }
 
 .borderless {
-    border-color: white;
+    border-color: black;
     margin: 0 10px;
 }
 
