--- a/frontend/src/printPreview/printPreview.css
+++ b/frontend/src/printPreview/printPreview.css
@@ -7,7 +7,18 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    display: block;
+    display: flex;              /* use flex layout */
+    justify-content: center;    /* center horizontally */
+    align-items: center;
+}
+
+.lsPrinterPageSize {
+    width: 11in;
+    height: 8.5in;
+    box-sizing: border-box;
+    display: flex;              /* use flex layout */
+    justify-content: center;    /* center horizontally */
+    align-items: center;
 }
 
 .labelGrid {
@@ -18,6 +29,8 @@
 
 .lsLabelGrid {
     display: grid;
+    place-items: center;
+    align-items: center;
     grid-template-columns: repeat(4, 2.7in);
     grid-template-rows: repeat(4, 2in);
 }
